
- unlikely but possible incompatibility: the definition of TRUE has changed
  from "1" to "(bool)1" (and the same thing for FALSE), so the code which
  could be erroneously compiled previously such as doing "return FALSE" from
  a function returning a pointer would stop compiling now (but this change
  is not supposed to have any effects on valid code)

All (GUI):

! the event type constants are not constants any more but are dynamically
  allocated during run-time which means that they can't be used as case labels
  in the switch()es, you must rewrite them to use if()s instead

  You may also define WXWIN_COMPATIBILITY_EVENT_TYPES to get the old behaviour
  but this is strongly discouraged, please consider changing your code
  instead!

! wxDialog does not derive from wxPanel any longer - if you were using it in
  your code, please update it. The quick fix for the most cases is to replace
  the occurrences of wxPanel with wxWindow.

! if you handle (and don't skip) EVT_KEY_DOWN, the EVT_CHAR event is not
  generated at all, so you must call event.Skip() in your OnKeyDown() if
  you want to get OnChar() as well

- wxYES_NO is now wxYES | wxNO and the manifest values of both wxYES and wxNO
  have changed (to fix some unfortunate clashes), please check your code to
  ensure that no tests for wxYES or wxNO are broken: for example, the following
  will *NOT* work any longer:

        if ( flags & wxYES_NO )
                ... do something ...
        if ( flags & wxYES )
                ... do something else ...

- wxGLCanvas now derives directly from wxWindow, not wxScrolledWindow

- wxGridCellAttrProvider class API changed, you will need to update your code
  if you derived any classes from it

- wxImage::ComputeHistogram()'s signature changed to 
  unsigned long ComputeHistogram(wxImageHistogram&) const

- wxEvtHandler cannot be copied/assigned any longer - this never worked but
  now it results in compile-time error instead of run-time crashes
