@@ -238,7 +238,7 @@ Returns 0 under X, and the wParam of the WM\_QUIT message under Windows.
 
 \membersection{wxApp::OnAssert}\label{wxapponassert}
 
-\func{void}{OnAssert}{\param{const wxChar }{*file}, \param{int }{line}, \param{const wxChar }{*msg}}
+\func{void}{OnAssert}{\param{const wxChar }{*file}, \param{int }{line}, \param{const wxChar }{*cond}, \param{const wxChar }{*msg}}
 
 This function is called when an assert failure occurs, i.e. the condition
 specified in \helpref{wxASSERT}{wxassert} macro evaluated to {\tt FALSE}.
@@ -253,6 +253,8 @@ the user to stop the program, continue or ignore all subsequent asserts.
 \docparam{file}{the name of the source file where the assert occured}
 
 \docparam{line}{the line number in this file where the assert occured}
+
+\docparam{cond}{the condition of the failed assert in string form}
 
 \docparam{msg}{the message specified as argument to 
 \helpref{wxASSERT\_MSG}{wxassertmsg} or \helpref{wxFAIL\_MSG}{wxfailmsg}, will
